# aec-library

./: .gitignore  CMakeLists.txt  LICENCE.md  README-examples.md  README.md
.github/workflows/: ci.yml
android/java/com/example/aec/: AecWrapper.java
benchmarks/: CMakeLists.txt  aec_benchmark.cpp
examples/: CMakeLists.txt  basic_usage.cpp  wav_aec.cpp  wav_io.hpp  webrtc_aec_demo.cpp
include/aec/: aec.hpp  config.hpp  double_talk_detector.hpp  fixed_point.hpp  nlms_filter.hpp  webrtc_adapter.h
scripts/: check_performance.py  generate_test_audio.py
src/: aec.cpp  aec_jni.cpp  double_talk_detector.cpp  fixed_point.cpp  nlms_filter.cpp  webrtc_adapter.cpp
tests/: CMakeLists.txt  test_aec.cpp  test_double_talk.cpp  test_fixed_point.cpp  test_multichannel.cpp  test_nlms.cpp  test_webrtc_adapter.cpp
